--- a/Projeto_Final/HTMLCSS/CSS/sidebar.css
+++ b/Projeto_Final/HTMLCSS/CSS/sidebar.css
@@ -25,7 +25,7 @@
             position: fixed;
             bottom: 0;
             left: 0;
-        
+            width: 200px;
         }
 
             .sidebar a.active {
