--- a/Projeto_Final/HTMLCSS/main.cshtml
+++ b/Projeto_Final/HTMLCSS/main.cshtml
@@ -32,20 +32,55 @@
                 <a class="logoff" onclick="LogOff()">Fazer Logoff</a>
             </div>
         </nav>
-        <div class="content" id="content">
-            @if (logado)
-            {
 
-                <p>Seu nível de permissão é: @cookie.Value.ToString()</p>
-                <br />
-                <br />
-            }
-            else
-            {
-                <h1> Algo deu ERRADO </h1>
-            }
-        </div>
+        <main>
+            <div class="content" id="content">
+                <!-- Slideshow container -->
+                <div class="slideshow-container">
 
+                    <!-- Full-width images with number and caption text -->
+                    <div class="mySlides fade">
+                        <div class="numbertext">1 / 3</div>
+                        <img src="~/IMG/img1.jpg" style="width:100%">
+                        <div class="text">Caption Text</div>
+                    </div>
+
+                    <div class="mySlides fade">
+                        <div class="numbertext">2 / 3</div>
+                        <img src="~/IMG/img2.jpg" style="width:100%">
+                        <div class="text">Caption Two</div>
+                    </div>
+
+                    <div class="mySlides fade">
+                        <div class="numbertext">3 / 3</div>
+                        <img src="~/IMG/img3.jpg" style="width:100%">
+                        <div class="text">Caption Three</div>
+                    </div>
+
+                    <!-- Next and previous buttons -->
+                    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                </div>
+                <br>
+
+                <!-- The dots/circles -->
+                <div style="text-align:center">
+                    <span class="dot" onclick="currentSlide(1)"></span>
+                    <span class="dot" onclick="currentSlide(2)"></span>
+                    <span class="dot" onclick="currentSlide(3)"></span>
+                </div>
+
+                <!-- Paragrafos -->
+                <p class="texto_prin">
+                    Somos curiosos e tecnológicos.
+                    Somos Cenai. Desde 1942, oferecemos educação e 
+                    serviços que auxiliam no desenvolvimento da 
+                    indústria e dos gaúchos.
+                </p>
+
+
+            </div>
+        </main>
     </section>
     <script src="~/JS/Index.js"></script>
 </body>
