--- a/Projeto_Final/HTMLCSS/CSS/main.css
+++ b/Projeto_Final/HTMLCSS/CSS/main.css
@@ -4,14 +4,18 @@
 }
 
 .bg {
-    background-color:aliceblue;
+    background-color:#717171;
+}
+
+img {
+    max-width: 1000px;
+    max-height: 400px;
 }
 
 * {
     box-sizing: border-box
 }
 
-/* Slideshow container */
 .slideshow-container {
     max-width: 1000px;
     position: relative;
@@ -23,43 +27,22 @@
     display: none;
 }
 
-/* Next & previous buttons */
-.prev, .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    margin-top: -22px;
-    padding: 16px;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-}
-
-    /* On hover, add a black background color with a little bit see-through */
-    .prev:hover, .next:hover {
-        background-color: rgba(0,0,0,0.8);
-    }
-
 /* Caption text */
 .text {
+    
     color: #f2f2f2;
     font-size: 15px;
-    padding: 8px 12px;
+    padding: 12px 10px;
     position: absolute;
-    bottom: 8px;
+    bottom: 0;
     width: 100%;
     text-align: center;
 }
+
+    .text:hover {
+        background-color: rgba(0,0,0,0.5);
+        font-weight: bold;
+    }
 
 /* Number text (1/3 etc) */
 .numbertext {
@@ -73,8 +56,8 @@
 /* The dots/bullets/indicators */
 .dot {
     cursor: pointer;
-    height: 15px;
-    width: 15px;
+    height: 10px;
+    width: 10px;
     margin: 0 2px;
     background-color: #bbb;
     border-radius: 50%;
@@ -102,11 +85,3 @@
     }
 }
 
-p.texto_prin {
-    flex: 1 0 auto;
-    -webkit-flex: 1 0 auto;
-    min-height: 200px;
-    float: left;
-    width: 300px;
-    margin: auto;
-}
