--- a/Projeto_Final/HTMLCSS/main.cshtml
+++ b/Projeto_Final/HTMLCSS/main.cshtml
@@ -20,6 +20,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="~/HTMLCSS/CSS/sidebar.css" />
     <link rel="stylesheet" href="~/HTMLCSS/CSS/main.css" />
+
     <title>CENAI</title>
 </head>
 <body div class="bg">
@@ -35,48 +36,47 @@
 
         <main>
             <div class="content" id="content">
-                <!-- Slideshow container -->
+                <!-- Slideshow -->
                 <div class="slideshow-container">
 
                     <!-- Full-width images with number and caption text -->
                     <div class="mySlides fade">
-                        <div class="numbertext">1 / 3</div>
-                        <img src="~/IMG/img1.jpg" style="width:100%">
-                        <div class="text">Caption Text</div>
+                        <div class="numbertext">1 / 4</div>
+                        <a href="#"><img src="~/IMG/img1.jpg" style="width:100%"></a>
+                        <div class="text">CURSO WEB DESIGN</div>
                     </div>
 
                     <div class="mySlides fade">
-                        <div class="numbertext">2 / 3</div>
-                        <img src="~/IMG/img2.jpg" style="width:100%">
-                        <div class="text">Caption Two</div>
+                        <div class="numbertext">2 / 4</div>
+                        <a href="#"><img src="~/IMG/img2.jpg" style="width:100%"></a>
+                        <div class="text">CURSO DE ARDUINO</div>
                     </div>
 
                     <div class="mySlides fade">
-                        <div class="numbertext">3 / 3</div>
-                        <img src="~/IMG/img3.jpg" style="width:100%">
-                        <div class="text">Caption Three</div>
+                        <div class="numbertext">3 / 4</div>
+                        <a href="#"><img src="~/IMG/img3.jpeg" style="width:100%"></a>
+                        <div class="text">CURSO DE INTERNET DAS COISAS (IOT)</div>
                     </div>
 
-                    <!-- Next and previous buttons -->
-                    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                    <div class="mySlides fade">
+                        <div class="numbertext">4 / 4</div>
+                        <a href="#"><img src="~/IMG/img4.jpg" style="width:100%"></a>
+                        <div class="text">CURSO DE PROGRAMAÇÃO ORIENTADA A OBJETOS (POO)</div>
+                    </div>
                 </div>
-                <br>
+                <br />
 
-                <!-- The dots/circles -->
+                <!-- Pontinhos -->
                 <div style="text-align:center">
                     <span class="dot" onclick="currentSlide(1)"></span>
                     <span class="dot" onclick="currentSlide(2)"></span>
                     <span class="dot" onclick="currentSlide(3)"></span>
+                    <span class="dot" onclick="currentSlide(4)"></span>
                 </div>
-
+                <br />
                 <!-- Paragrafos -->
-                <p class="texto_prin">
-                    Somos curiosos e tecnológicos.
-                    Somos Cenai. Desde 1942, oferecemos educação e 
-                    serviços que auxiliam no desenvolvimento da 
-                    indústria e dos gaúchos.
-                </p>
+                
+
 
 
             </div>
