--- a/Projeto_Final/HTMLCSS/CSS/Listagem.css
+++ b/Projeto_Final/HTMLCSS/CSS/Listagem.css
@@ -2,33 +2,57 @@
 body, html {
     margin: 0;
     min-height: 100%;
+    
 }
 
-button.btn_edit,
-button.btn_remove {
+.bg {
+    background: linear-gradient(0deg, rgba(217,238,225,1) 24%, rgba(150,212,212,1) 88%);
+}
+
+.container {
+    margin-top: 10px;
+    border-radius: 10px;
+    background: rgba(255, 255, 255, 0.5);
+    box-shadow: 0 26px 26px rgba(0, 0, 0, 0.4);
+}
+.opcoes {
+    position: relative;
+    display: flex;
+    margin: auto;
+    padding: 0;
+    width: auto;
+}
+
+.opcoes a {
+    flex: 1;
+    display: block;
+    width: 50px;
+    color: white;
+    padding: 16px;
+    border: none;
+    text-decoration: none;
+}
+.opcoes a.active {
+    background-color: #78aaa6;
+    color: white;
+}
+
+.opcoes a:hover:not(.active) {
+    background-color: #b3ddd9;
+    color: white;
+}
+
+.lista a {
+    display: block;
     border: none;
     border-radius: 5px;
     background-color: white;
     color: #808080;
+    text-decoration: none;
 }
 
-button:nth-of-type(2n, 3n) {
-    background-color: #808080;
-    color: white;
-}
-    
-
-input[type=submit] {
-    background-color: #c5f6f1;
-    border: none;
-    width: 200px;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-    border-radius: 5px;
-}
-input[type=submit]:hover {
-    background-color: #b3ddd9;
+.lista a:hover {
+    background-color:lightgrey;
 }
 
 table {
@@ -45,5 +69,5 @@ td, th {
 }
 
 tr:nth-child(even) {
-    background-color: #808080;
+    background-color: #78aaa6;
 }
