--- a/Projeto_Final/HTMLCSS/CSS/main.css
+++ b/Projeto_Final/HTMLCSS/CSS/main.css
@@ -1,20 +1,16 @@
-﻿body{
+﻿body {
     margin: 0;
     min-height: 100%;
+    box-sizing: border-box;
+    background: linear-gradient(0deg, rgba(217,238,225,1) 24%, rgba(150,212,212,1) 88%);
 }
 
-.bg {
-    background-color:#717171;
-}
 
 img {
     max-width: 1000px;
     max-height: 400px;
 }
 
-* {
-    box-sizing: border-box
-}
 
 .slideshow-container {
     max-width: 1000px;
