--- a/Projeto_Final/HTMLCSS/CSS/registro_turma.css
+++ b/Projeto_Final/HTMLCSS/CSS/registro_turma.css
@@ -4,17 +4,6 @@ body, html {
     margin: 0;
 }
 
-.bg {
-    background-image: url(../../IMG/fundo_registro.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    overflow-y: hidden;
-}
-
-.content {
-
-}
-
 .container {
     backdrop-filter: saturate(180%);
     backdrop-filter: blur(999px);
@@ -34,15 +23,8 @@ body, html {
     box-shadow: 0 26px 42px rgba(0, 0, 0, 0.5);
 }
 
-label {
-    font-family: "Open Sans Hebrew", "Open Sans", sans-serif;
-    font-weight: bold;
-}
 
-input[type=email],
-input[type=password],
 input[type=text],
-input[type=tel],
 select {
     background-color: #e6e6e6;
     border: none;
@@ -53,10 +35,12 @@ select {
     border-radius: 5px;
 }
 
-
-
-
-input[type=submit]{
+input[type=radio]{
+    float: left;
+    text-align: left;
+    
+}
+input[type=submit] {
     background-color: #c5f6f1;
     border: none;
     width: 200px;
@@ -64,7 +48,6 @@ input[type=submit]{
     margin: 8px 0;
     box-sizing: border-box;
     border-radius: 5px;
-    
 }
 
 input[type=submit]:hover{
