--- a/Projeto_Final/HTMLCSS/Index.cshtml
+++ b/Projeto_Final/HTMLCSS/Index.cshtml
@@ -12,7 +12,7 @@
     <title>CENAI</title>
 </head>
 <body div class="bg">
-    <form method="post" action="~/HTMLCSS/temps/temp_index.cshtml">
+    <form method="post" action="~/HTML TEMP/Checagem/check_login.cshtml">
         <div class="container">
             <div class="login">
                 <center>
