--- a/Projeto_Final/HTMLCSS/Registro/registro_sala.cshtml
+++ b/Projeto_Final/HTMLCSS/Registro/registro_sala.cshtml
@@ -92,7 +92,7 @@
     </nav>
         <main>
             <div class="content">
-                <form method="post" action="~/HTMLCSS/temps/registrando_sala.cshtml">
+                <form method="post" action="~/HTML TEMP/Passagem/registrando_sala.cshtml">
                     <div class="container">
                         <center>
                             <div class="registro">
