--- a/Projeto_Final/HTMLCSS/Registro/registro.cshtml
+++ b/Projeto_Final/HTMLCSS/Registro/registro.cshtml
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,300,1,-25" />
     <!--CSS-->
     <link rel="stylesheet" href="~/HTMLCSS/CSS/sidebar.css" />
-    <link rel="stylesheet" href="~/HTMLCSS/CSS/registro_turma.css" />
+    <link rel="stylesheet" href="~/HTMLCSS/CSS/registro.css" />
 
     <title>CENAI</title>
 </head>
@@ -92,7 +92,7 @@
     </nav>
         <main>
             <div class="content">
-                <form method="post" onsubmit="return checkPassword(this);" action="~/HTMLCSS/temps/registrando.cshtml">
+                <form method="post" onsubmit="return checkPassword(this);" action="~/HTML TEMP/Passagem/registrando.cshtml">
                     <div class="container">
                         <center>
                             <div class="registro">
