--- a/Projeto_Final/HTMLCSS/Listagem/listagem_setores.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/listagem_setores.cshtml
@@ -32,10 +32,16 @@
                     Pagina Inicial
                 </a>
                 <!--MATRICULA-->
-                <a href="#">
+                <button class="dropdown-btn">
                     <span class="material-symbols-outlined">person_add</span>
                     Matricula
-                </a>
+                    <span class="material-symbols-outlined">expand_more</span>
+                </button>
+                <!--MATRICULA OPCOES-->
+                <div class="dropdown-container">
+                    <a href="~/HTMLCSS/Registro/matricula.cshtml">Fazer Matricula</a>
+                    <a href="~/HTMLCSS/Listagem/Lista_alunos/aluno_turma.cshtml">Alunos Matriculados</a>
+                </div>
                 <!--REGISTRO-->
                 <button class="dropdown-btn">
                     <span class="material-symbols-outlined">app_registration</span>
