--- a/Projeto_Final/HTMLCSS/Listagem/Listagem.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/Listagem.cshtml
@@ -32,10 +32,16 @@
                     Pagina Inicial
                 </a>
                 <!--MATRICULA-->
-                <a href="#">
+                <button class="dropdown-btn">
                     <span class="material-symbols-outlined">person_add</span>
                     Matricula
-                </a>
+                    <span class="material-symbols-outlined">expand_more</span>
+                </button>
+                <!--MATRICULA OPCOES-->
+                <div class="dropdown-container">
+                    <a href="~/HTMLCSS/Registro/matricula.cshtml">Fazer Matricula</a>
+                    <a href="~/HTMLCSS/Listagem/Lista_alunos/aluno_turma.cshtml">Alunos Matriculados</a>
+                </div>
                 <!--REGISTRO-->
                 <button class="dropdown-btn">
                     <span class="material-symbols-outlined">app_registration</span>
@@ -44,7 +50,7 @@
                 </button>
                 <!--REGISTRO OPCOES-->
                 <div class="dropdown-container">
-                    <a  href="~/HTML TEMP/Checagem/check_registro.cshtml">Usuarios</a>
+                    <a href="~/HTML TEMP/Checagem/check_registro.cshtml">Usuarios</a>
                     <a href="~/HTMLCSS/Registro/registro_turma.cshtml">Turmas</a>
                     <a href="~/HTMLCSS/Registro/registro_sala.cshtml">Salas</a>
                     <a href="~/HTMLCSS/Registro/registro_setores.cshtml">Setores</a>
@@ -95,10 +101,9 @@
         <div class="content" id="content">
             <div class="container">
                 <div class="opcoes">
-                    <a href="" >Pesquisa por CPF</a>
-                
-                    <a href="#Niv">Pesquisa por Nivel de Acesso</a>
-               
+                    
+
+
                     <a onclick="poof('lista')">Listar Todos</a>
                 </div>
                     
