--- a/Projeto_Final/HTMLCSS/Listagem/listagem_sala.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/listagem_sala.cshtml
@@ -32,10 +32,16 @@
                     Pagina Inicial
                 </a>
                 <!--MATRICULA-->
-                <a href="#">
+                <button class="dropdown-btn">
                     <span class="material-symbols-outlined">person_add</span>
                     Matricula
-                </a>
+                    <span class="material-symbols-outlined">expand_more</span>
+                </button>
+                <!--MATRICULA OPCOES-->
+                <div class="dropdown-container">
+                    <a href="~/HTMLCSS/Registro/matricula.cshtml">Fazer Matricula</a>
+                    <a href="~/HTMLCSS/Listagem/Lista_alunos/aluno_turma.cshtml">Alunos Matriculados</a>
+                </div>
                 <!--REGISTRO-->
                 <button class="dropdown-btn">
                     <span class="material-symbols-outlined">app_registration</span>
@@ -113,14 +119,15 @@
                         @foreach (sala salas in lista)
                         {
                             <tr>
+                                <td hidden>@salas.idsala</td>
                                 <td>Sala @salas.numsala</td>
                                 <td>
                                     <a href="#Editar" class="btn_edit">
                                         <span class="glyphicon glyphicon-edit"></span> Editar
                                     </a>
-                                    <a href="#Remover" class="btn_remove">
-                                        <span class="glyphicon glyphicon-remove-circle"></span> Remover
-                                    </a>
+                                    <a onclick="@{Funcoes.Delete_Sala(salas)} " class="btn_remove">
+                                  <span class="glyphicon glyphicon-remove-circle"></span> Remover
+                              </a>
                                 </td>
                             </tr>
                         }
