--- a/Projeto_Final/HTMLCSS/Listagem/listagem_turma.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/listagem_turma.cshtml
@@ -32,10 +32,16 @@
                     Pagina Inicial
                 </a>
                 <!--MATRICULA-->
-                <a href="#">
+                <button class="dropdown-btn">
                     <span class="material-symbols-outlined">person_add</span>
                     Matricula
-                </a>
+                    <span class="material-symbols-outlined">expand_more</span>
+                </button>
+                <!--MATRICULA OPCOES-->
+                <div class="dropdown-container">
+                    <a href="~/HTMLCSS/Registro/matricula.cshtml">Fazer Matricula</a>
+                    <a href="~/HTMLCSS/Listagem/Lista_alunos/aluno_turma.cshtml">Alunos Matriculados</a>
+                </div>
                 <!--REGISTRO-->
                 <button class="dropdown-btn">
                     <span class="material-symbols-outlined">app_registration</span>
@@ -106,16 +112,18 @@
                 <center>
                     <table>
                         <tr>
+                            <th>TURMA</th>
                             <th>CURSO</th>
                             <th>TURNO</th>
-                            <th>SALA</th>
                             <th>PROFESSOR</th>
+                            <th>SALA</th>
                             <th>OPÇÕES</th>
                         </tr>
                         @{List<turma> lista = Funcoes.Listagem_Turmas();}
                         @foreach (turma turmas in lista)
                         {
                         <tr>
+                            <td>@turmas.idturma</td>
                             <td>@turmas.nome_curso</td>
                             <td>@turmas.turno</td>
                             <td>@turmas.idsala</td>
