--- a/Projeto_Final/HTMLCSS/Registro/registro.cshtml
+++ b/Projeto_Final/HTMLCSS/Registro/registro.cshtml
@@ -31,10 +31,16 @@
                 Pagina Inicial
             </a>
             <!--MATRICULA-->
-            <a href="#">
+            <button class="dropdown-btn">
                 <span class="material-symbols-outlined">person_add</span>
                 Matricula
-            </a>
+                <span class="material-symbols-outlined">expand_more</span>
+            </button>
+            <!--MATRICULA OPCOES-->
+            <div class="dropdown-container">
+                <a href="~/HTMLCSS/Registro/matricula.cshtml">Fazer Matricula</a>
+                <a href="~/HTMLCSS/Listagem/Lista_alunos/aluno_turma.cshtml">Alunos Matriculados</a>
+            </div>
             <!--REGISTRO-->
             <button class="dropdown-btn">
                 <span class="material-symbols-outlined">app_registration</span>
@@ -45,7 +51,7 @@
             <div class="dropdown-container">
                 <a class="active" href="~/HTML TEMP/Checagem/check_registro.cshtml">Usuarios</a>
                 <a href="~/HTMLCSS/Registro/registro_turma.cshtml">Turmas</a>
-                <a  href="~/HTMLCSS/Registro/registro_sala.cshtml">Salas</a>
+                <a href="~/HTMLCSS/Registro/registro_sala.cshtml">Salas</a>
                 <a href="~/HTMLCSS/Registro/registro_setores.cshtml">Setores</a>
             </div>
             <!--LISTAGEM-->
