--- a/Projeto_Final/HTMLCSS/Registro/registro_turma.cshtml
+++ b/Projeto_Final/HTMLCSS/Registro/registro_turma.cshtml
@@ -26,15 +26,21 @@
         <!--SIDEBAR-->
         <div class="sidenav" onclick="Dropdownbtn()">
             <!--PAGINA INICIAL-->
-            <a  href="~/HTMLCSS/main.cshtml">
+            <a href="~/HTMLCSS/main.cshtml">
                 <span class="material-symbols-outlined">home</span>
                 Pagina Inicial
             </a>
             <!--MATRICULA-->
-            <a href="#">
+            <button class="dropdown-btn">
                 <span class="material-symbols-outlined">person_add</span>
                 Matricula
-            </a>
+                <span class="material-symbols-outlined">expand_more</span>
+            </button>
+            <!--MATRICULA OPCOES-->
+            <div class="dropdown-container">
+                <a href="~/HTMLCSS/Registro/matricula.cshtml">Fazer Matricula</a>
+                <a href="~/HTMLCSS/Listagem/Lista_alunos/aluno_turma.cshtml">Alunos Matriculados</a>
+            </div>
             <!--REGISTRO-->
             <button class="dropdown-btn">
                 <span class="material-symbols-outlined">app_registration</span>
