--- a/Projeto_Final/HTMLCSS/main.cshtml
+++ b/Projeto_Final/HTMLCSS/main.cshtml
@@ -57,7 +57,7 @@
                 </button>
                 <!--REGISTRO OPCOES-->
                 <div class="dropdown-container">
-                    <a href="~/HTML TEMP/Checagem/check_registro.cshtml">Usuarios</a>
+                    <a href="~/HTMLTEMP/Checagem/check_registro.cshtml">Usuarios</a>
                     <a href="~/HTMLCSS/Registro/registro_turma.cshtml">Turmas</a>
                     <a href="~/HTMLCSS/Registro/registro_sala.cshtml">Salas</a>
                     <a href="~/HTMLCSS/Registro/registro_setores.cshtml">Setores</a>
@@ -70,7 +70,7 @@
                 </button>
                 <!--LISTAGEM OPCOES-->
                 <div class="dropdown-container">
-                    <a href="~/HTML TEMP/Checagem/check_listagem.cshtml">Usuarios</a>
+                    <a href="~/HTMLTEMP/Checagem/check_listagem.cshtml">Usuarios</a>
                     <a href="~/HTMLCSS/Listagem/listagem_turma.cshtml">Turmas</a>
                     <a href="~/HTMLCSS/Listagem/listagem_sala.cshtml">Salas</a>
                     <a href="~/HTMLCSS/Listagem/listagem_setores.cshtml">Setores</a>
