--- a/Projeto_Final/HTMLCSS/Listagem/Listagem.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/Listagem.cshtml
@@ -50,7 +50,7 @@
                 </button>
                 <!--REGISTRO OPCOES-->
                 <div class="dropdown-container">
-                    <a href="~/HTML TEMP/Checagem/check_registro.cshtml">Usuarios</a>
+                    <a href="~/HTMLTEMP/Checagem/check_registro.cshtml">Usuarios</a>
                     <a href="~/HTMLCSS/Registro/registro_turma.cshtml">Turmas</a>
                     <a href="~/HTMLCSS/Registro/registro_sala.cshtml">Salas</a>
                     <a href="~/HTMLCSS/Registro/registro_setores.cshtml">Setores</a>
@@ -63,7 +63,7 @@
                 </button>
                 <!--LISTAGEM OPCOES-->
                 <div class="dropdown-container">
-                    <a class="active" href="~/HTML TEMP/Checagem/check_listagem.cshtml">Usuarios</a>
+                    <a clTEMP/Checagem/check_listagem.cshtml">Usuarios</a>
                     <a href="~/HTMLCSS/Listagem/listagem_turma.cshtml">Turmas</a>
                     <a href="~/HTMLCSS/Listagem/listagem_sala.cshtml">Salas</a>
                     <a href="~/HTMLCSS/Listagem/listagem_setores.cshtml">Setores</a>
