--- a/Projeto_Final/HTMLCSS/Registro/registro.cshtml
+++ b/Projeto_Final/HTMLCSS/Registro/registro.cshtml
@@ -49,7 +49,7 @@
             </button>
             <!--REGISTRO OPCOES-->
             <div class="dropdown-container">
-                <a class="active" href="~/HTML TEMP/Checagem/check_registro.cshtml">Usuarios</a>
+                <a class="active" href="~/HTMLTEMP/Checagem/check_registro.cshtml">Usuarios</a>
                 <a href="~/HTMLCSS/Registro/registro_turma.cshtml">Turmas</a>
                 <a href="~/HTMLCSS/Registro/registro_sala.cshtml">Salas</a>
                 <a href="~/HTMLCSS/Registro/registro_setores.cshtml">Setores</a>
@@ -62,7 +62,7 @@
             </button>
             <!--LISTAGEM OPCOES-->
             <div class="dropdown-container">
-                <a href="~/HTML TEMP/Checagem/check_listagem.cshtml">Usuarios</a>
+                <a href="~/HTMLTEMP/Checagem/check_listagem.cshtml">Usuarios</a>
                 <a href="~/HTMLCSS/Listagem/listagem_turma.cshtml">Turmas</a>
                 <a href="~/HTMLCSS/Listagem/listagem_sala.cshtml">Salas</a>
                 <a href="~/HTMLCSS/Listagem/listagem_setores.cshtml">Setores</a>
@@ -98,7 +98,7 @@
     </nav>
         <main>
             <div class="content">
-                <form method="post" onsubmit="return checkPassword(this);" action="~/HTML TEMP/Passagem/registrando.cshtml">
+                <form method="post" onsubmit="return checkPassword(this);" action="~/HTMLTEMP/Passagem/registrando.cshtml">
                     <div class="container">
                         <center>
                             <div class="registro">
