--- a/Projeto_Final/HTMLTEMP/Checagem/check_login.cshtml
+++ b/Projeto_Final/HTMLTEMP/Checagem/check_login.cshtml
@@ -39,14 +39,14 @@
             case "professor":
                 <text>
                     <script>
-                        window.location.href = "/HTMLCSS/main.cshtml";
+                        window.location.href = "/HTMLCSS/main_professor.cshtml";
                     </script>
                 </text>
                 break;
             case "usuario":
                 <text>
                     <script>
-                        window.location.href = "/HTMLCSS/main.cshtml";
+                        window.location.href = "/HTMLCSS/main_user.cshtml";
                     </script>
                 </text>
                 break;
